--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Dependency management for my paper implementations"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastkan",
     "matplotlib>=3.10.3",
     "numpy>=2.2.6",
+    "openml>=0.15.1",
     "pandas>=2.2.3",
     "pytest>=8.3.5",
     "shap>=0.47.2",
+    "shapley-regression",
     "torch>=2.7.0",
 ]
 
@@ -17,4 +20,10 @@ dependencies = [
 dev = [
     "black>=25.1.0",
     "isort>=6.0.1",
+    "jupyterlab>=4.4.3",
+    "marimo>=0.13.11",
 ]
+
+[tool.uv.sources]
+shapley-regression = { git = "https://github.com/iancovert/shapley-regression.git" }
+fastkan = { git = "https://github.com/ZiyaoLi/fast-kan", rev = "17b6540" }
