--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastkan",
+    "imbalanced-learn>=0.13.0",
     "matplotlib>=3.10.3",
     "numpy>=2.2.6",
     "openml>=0.15.1",
